# rust-website

./: .env.example  Cargo.toml  README.md  seed.sh  website.service.example
src/: db.rs  main.rs  models.rs
static/: 404.html
templates/: about.html  base.html  blog.html  contact.html  home.html  post.html  thanks.html  work.html
templates/projects/: example.html
