[package]
name = "rust-site-template"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
opt-level = 3
lto = true
strip = true
